[package]
name = "user_trait"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for user authentication abstraction in Rust."
readme = "README.md"
homepage = "https://github.com/e1732a364fed/user_trait"
repository = "https://github.com/e1732a364fed/user_trait"
keywords = ["user", "authentication", "trait", "auth"]
categories = ["Authentication", "Data Structures"]

[dependencies]

serde = { version = "1", features = ["derive"] }
typetag = "0.2"
dyn-clone = "1"
